[package]
name = "hls-manifest-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
m3u8 = { git = "https://github.com/theRealRobG/m3u8", tag = "0.2.0" }
fluent-uri = "0.3"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
pretty_assertions = "1.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
