[package]
name = "hls-manifest-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
quick-m3u8 = "0.6"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Response",
    "DomException",
    "Headers",
    "Request",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
url = "2.5"
percent-encoding = "2.3"
leptos-use = { version = "0.16", features = ["use_clipboard"] }
mp4-atom = "0.8.1"
id3 = "1.16"
console_log = "1"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
